implemented the functionality that display fetched results fom the server into the HTML
iterated over the list of wiki inputted value then destructured the needed properies for the display of the list they dynamically added it to the HTML

--- a/index.html
+++ b/index.html
@@ -21,15 +21,7 @@
       <!-- end of img and form section -->
       <!-- wiki result display -->
       <div class="results">
-        <div class="articles">
-          <a href="#" target="_blank">
-            <h4>Title</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Laboriosam, voluptatem!
-            </p>
-          </a>
-        </div>
+        <!-- The Iterated List of inputted Value is displayed here -->
       </div>
       <!-- end of wiki result display -->
     </section>
