--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wikipedia Starter</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <section class="wiki">
@@ -25,6 +32,19 @@
       </div>
       <!-- end of wiki result display -->
     </section>
+    <footer>
+      <div class="social-icons">
+        <a href="https://twitter.com/codexive_zech"
+          ><i class="social-icon fab fa-twitter"></i
+        ></a>
+        <a href="https://www.instagram.com/codexive_zech/"
+          ><i class="social-icon fab fa-instagram"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/zechariah-houwanou/"
+          ><i class="social-icon fab fa-linkedin"></i
+        ></a>
+      </div>
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
