added footer credit

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </section>
     <footer>
       <div class="social-icons">
+        <p>Developed By Codexive</p>
         <a href="https://twitter.com/codexive_zech"
           ><i class="social-icon fab fa-twitter"></i
         ></a>
